--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
           <a class="page-header__logo" href="index.html">
             <img
               class="page-header__logo-image"
-              src="../source/img/mishka-logo-mobile.svg"
+              src=".//img/mishka-logo-mobile.svg"
               width="86"
               height="35"
               alt="Логотип сайта."
@@ -43,82 +43,105 @@
             </a>
             <span class="">Корзина:пока пуста</span>
           </div>
+          <ul class="header-nav__promo-list">
+            <li class="header-nav__promo-item header-nav__promo-item--delivery">
+              <a class="header-nav__promo-link header-nav__promo-link--delivery" href="#">Бесплатная доставка по России</a>
+            </li>
+
+            <li class="header-nav__promo-item header-nav__promo-item--new">
+              <a class="header-nav__promo-link header-nav__promo-link--new" href="#">Новые поступления</a>
+            </li>
+
+            <li class="header-nav__promo-item header-nav__promo-item--sell">
+              <a class="header-nav__promo-link header-nav__promo-link--sell" href="#">Распродажа</a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
 
     <main>
+      <section class="intro">
+        <h1 class="intro__title">
+          Каталог товаров
+        </h1>
+      </section>
       <section class="catalog">
+        <h2 class="visually-hidden">
+          Список товаров.
+        </h2>
         <ul class="catalog__list">
           <li class="catalog__item catalog-item">
-            <a class="catalog-item__link catalog-item__link--image" href="#">
+            <a class="catalog-item__link" href="#">
               <img
-                class="catalog-item__image"
-                src="../source/img/img-bunny-mobile.jpg"
+                class="catalog-item__link-image"
+                src=".//img/img-bunny-mobile.jpg"
                 width="260"
                 height="195"
                 alt="Вязанная игрушка в виде зайчика."
               />
             </a>
             <div class="catalog-item__info">
-              <h3 class="catalog-item__title">
-                <a class="catalog-item__link" href="#"> Зайчик-попрыгайчик </a>
-              </h3>
+                <a class="catalog-item__link" href="#"> <h3 class="catalog-item__title"> Зайчик-попрыгайчик </h3> </a>
               <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
             </div>
             <div class="catalog-item__footer">
               <span class="catalog-item__price">1 200 руб.</span>
-              <svg class="catalog-item__icon" width="20" height="19"></svg>
+              <button class="catalog-item__button button" type="submit">
+                <span class="visually-hidden">Добавить в корзину.</span>
+              </button>
             </div>
           </li>
 
           <li class="catalog__item catalog-item">
-            <a class="catalog-item__link catalog-item__link--image" href="#">
+            <a class="catalog-item__link " href="#">
               <img
-                class="catalog-item__image"
-                src="../source/img/small-basket.jpg"
+                class="catalog-item__link-image"
+                src=".//img/small-basket.jpg"
                 width="260"
                 height="195"
                 alt="Вязанная корзинка со сложенными полотенцами."
               />
             </a>
             <div class="catalog-item__info">
-              <h3 class="catalog-item__title">
-                <a class="catalog-item__link" href="#"> Корзинка для белья </a>
-              </h3>
+                <a class="catalog-item__link" href="#"> <h3 class="catalog-item__title"> Корзинка для белья </h3> </a>
               <p class="catalog-item__description">
                 Диаметр 15 см, высота 10 см
               </p>
             </div>
             <div class="catalog-item__footer">
               <span class="catalog-item__price">690 руб.</span>
-              <svg class="catalog-item__icon" width="20" height="19"></svg>
+              <button class="catalog-item__button button" type="submit">
+                <span class="visually-hidden">Добавить в корзину.</span>
+              </button>
             </div>
           </li>
 
           <li class="catalog__item catalog-item">
-            <a class="catalog-item__link catalog-item__link--image" href="#">
+            <a class="catalog-item__link" href="#">
               <img
                 class="catalog-item__image"
-                src="../source/img/big-basket.jpg"
+                src=".//img/big-basket.jpg"
                 width="260"
                 height="195"
                 alt="Вязанная корзинка с игрушками."
               />
             </a>
             <div class="catalog-item__info">
-              <h3 class="catalog-item__title">
                 <a class="catalog-item__link" href="#">
+                  <h3 class="catalog-item__title">
                   Большая корзинка для игрушек
+              </h3>>
                 </a>
-              </h3>
               <p class="catalog-item__description">
                 Диаметр 30 см, высота 30 см
               </p>
             </div>
             <div class="catalog-item__footer">
               <span class="catalog-item__price">1500 руб.</span>
-              <svg class="catalog-item__icon" width="20" height="19"></svg>
+              <button class="catalog-item__button button" type="submit">
+                <span class="visually-hidden">Добавить в корзину.</span>
+              </button>
             </div>
           </li>
         </ul>
@@ -129,22 +152,22 @@
           <h2 class="manufacturing__title">Процесс производства</h2>
           <div class="manufacturing__player-container">
             <img
-              src="../source/img/video-mobile.jpg"
+              src=".//img/video-mobile.jpg"
               width="260"
               height="150"
               alt="Воспроизвести видео."
             />
             <button class="manufacturing__player-button">
-              <img src="../source/img/play.svg" alt="Воспроизвести видео." />
+              <img src=".//img/play.svg" alt="Воспроизвести видео." />
             </button>
           </div>
           <p class="manufacturing__descriprion">
             По просьбам наших любимых фолловеров мы сняли для вас подробное
             видео о том, как появляются наши товары.
           </p>
-          <button class="manufacturing__button button" type="button">
+          <a class="manufacturing__button button" href="#">
             Сделать заказ
-          </button>
+          </a>
         </div>
       </section>
     </main>
@@ -152,39 +175,33 @@
     <footer class="page-footer">
       <div class="container">
         <div class="page-footer__inner">
-          <div class="page-footer__logo-wrapper">
             <a class="page-footer__logo" href="#">
               <svg class="page-footer__icon" width="102" height="34"></svg>
             </a>
-          </div>
-          <ul class="page-footer__list socials">
-            <li class="socials__item">
-              <a class="socials__link" href="#">
+          <ul class="page-footer__social social">
+            <li class="social__item">
+              <a class="social__link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
-                <svg class="socials__icon" width="27" height="17"></svg>
+                <svg class="social__icon" width="27" height="17"></svg>
               </a>
             </li>
-
-            <li class="socials__item">
-              <a class="socials__link" href="#">
+            <li class="social__item">
+              <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube.</span>
-                <svg class="socials__icon" width="24" height="19"></svg>
+                <svg class="social__icon" width="24" height="19"></svg>
               </a>
             </li>
-
-            <li class="socials__item">
-              <a class="socials__link" href="#">
+            <li class="social__item">
+              <a class="social__link" href="tg://https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram.</span>
-                <svg class="socials__icon" width="20" height="17"></svg>
+                <svg class="social__icon" width="20" height="17"></svg>
               </a>
             </li>
           </ul>
-          <div class="page-footer__developed developed">
-            <a class="developed__link" href="https://htmlacademy.ru/study">
-              <span class="developed__text">Разработано</span>
-              <svg class="developed__icon" width="27" height="34"></svg>
+            <a class="page-footer__developed" href="https://htmlacademy.ru/study">
+              <span class="page-footer__developed-text">Разработано</span>
+              <svg class="page-footer__developed-icon" width="27" height="34"></svg>
             </a>
-          </div>
         </div>
       </div>
     </footer>
