--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
           <a class="page-header__logo" href="index.html">
             <img
               class="page-header__logo-image"
-              src=".//img/mishka-logo-mobile.svg"
+              src="./img/mishka-logo-mobile.svg"
               width="86"
               height="35"
               alt="Логотип сайта."
@@ -75,7 +75,7 @@
             <a class="catalog-item__link" href="#">
               <img
                 class="catalog-item__link-image"
-                src=".//img/img-bunny-mobile.jpg"
+                src="./img/img-bunny-mobile.jpg"
                 width="260"
                 height="195"
                 alt="Вязанная игрушка в виде зайчика."
@@ -97,7 +97,7 @@
             <a class="catalog-item__link " href="#">
               <img
                 class="catalog-item__link-image"
-                src=".//img/small-basket.jpg"
+                src="./img/small-basket.jpg"
                 width="260"
                 height="195"
                 alt="Вязанная корзинка со сложенными полотенцами."
@@ -121,7 +121,7 @@
             <a class="catalog-item__link" href="#">
               <img
                 class="catalog-item__image"
-                src=".//img/big-basket.jpg"
+                src="./img/big-basket.jpg"
                 width="260"
                 height="195"
                 alt="Вязанная корзинка с игрушками."
@@ -152,13 +152,13 @@
           <h2 class="manufacturing__title">Процесс производства</h2>
           <div class="manufacturing__player-container">
             <img
-              src=".//img/video-mobile.jpg"
+              src="./img/video-mobile.jpg"
               width="260"
               height="150"
               alt="Воспроизвести видео."
             />
             <button class="manufacturing__player-button">
-              <img src=".//img/play.svg" alt="Воспроизвести видео." />
+              <img src="./img/play.svg" alt="Воспроизвести видео." />
             </button>
           </div>
           <p class="manufacturing__descriprion">
