--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
           <a class="page-header__logo" href="index.html">
             <img
               class="page-header__logo-image"
-              src=".//img/mishka-logo-mobile.svg"
+              src="./img/mishka-logo-mobile.svg"
               width="86"
               height="35"
               alt="Логотип сайта."
