--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="page-header header">
@@ -13,49 +14,84 @@
           <span class="visually-hidden">Открыть меню.</span>
         </button>
         <div class="header-nav__wrapper">
-          <a class="page-header__logo" href="index.html">
+          <a class="header-nav__logo" href="index.html">
             <img
-              class="page-header__logo-image"
+              class="header-nav__logo-image"
               src="./img/mishka-logo-mobile.svg"
               width="86"
               height="35"
               alt="Логотип сайта."
             />
           </a>
-          <ul class="header-nav__list">
+          <section class="intro">
+            <h1 class="intro__tittle">Вязание на заказ</h1>
+          </section>
+          <!-- <ul class="header-nav__list">
             <li class="header-nav__item">
               <a class="header-nav__link" href="catalog.html"
                 >Каталог товаров</a
               >
             </li>
             <li class="header-nav__item">
-              <a class="header-nav__link" href="#">Вязание на заказ</a>
+              <a class="header-nav__link" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-          <div class="header-nav__list user-list">
-            <a class="user-list__search" href="#">
+          <div class="header-nav__item user-list">
+            <a class="header-nav__link user-list__search" href="#">
               <span class="visually-hidden">Кнопка поиска.</span>
+              <span class="user-list__search user-list__search-description"
+                >Поиск по сайту</span
+              >
               <svg class="user-list__search-icon"></svg>
             </a>
-            <a class="user-list__basket" href="#">
+          </div>
+          <div class="header-nav__item user-list">
+            <a class="header-nav__link user-list__basket" href="#">
               <span class="visually-hidden">Корзина.</span>
               <svg class="user-list__basket-icon"></svg>
+              <span class="user-list__search user-list__basket-description"
+                >Корзина:пока пуста</span
+              >
             </a>
-            <span class="">Корзина:пока пуста</span>
           </div>
+          <ul class="header-nav__promo-list">
+            <li class="header-nav__promo-item header-nav__promo-item--delivery">
+              <a
+                class="header-nav__promo-link header-nav__promo-link--delivery"
+                href="#"
+                >Бесплатная доставка по России</a
+              >
+            </li>
+
+            <li class="header-nav__promo-item header-nav__promo-item--new">
+              <a
+                class="header-nav__promo-link header-nav__promo-link--new"
+                href="#"
+                >Новые поступления</a
+              >
+            </li>
+
+            <li class="header-nav__promo-item header-nav__promo-item--sell">
+              <a
+                class="header-nav__promo-link header-nav__promo-link--sell"
+                href="#"
+                >Распродажа</a
+              >
+            </li>
+          </ul>-->
         </div>
       </nav>
     </header>
 
     <main>
-      <section class="intro">
-        <h1 class="intro__tittle">Вязание на заказ</h1>
-      </section>
       <section class="knitting">
+        <div class="knitting__container container">
         <p class="knitting__description">
           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
           формузаказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
+      </div>
+      <div class="container">
         <form
           class="knitting__form form"
           action="https://echo.htmlacademy.ru/"
@@ -92,7 +128,7 @@
             </ul>
           </fieldset>
           <fieldset class="form-group form__group-wrapper form-group--grey">
-            <legend class="form-group__title">Цвет</legend>
+            <legend class="form-group__title form-group__title--color">Цвет</legend>
             <ul class="form__list form__list--has-wrapper">
               <li class="form__item form__item--checkbox">
                 <input
@@ -196,7 +232,7 @@
 
             <ul class="form__list form__list--about">
               <li class="form__item form__item--about">
-                <label class="form-group__label" for="name">Имя:</label>
+                <label class="form-group__label " for="name">Имя:</label>
 
                 <input
                   class="form-group__input form-group__input--about"
@@ -255,8 +291,6 @@
             <svg class="form-group__icon" width="25" height="24"></svg>
           </label>
 
-
-
             <legend class="form-group__title">E-mail</legend>
             <label class="form-group__title form-group__title--email">
             <input
@@ -271,11 +305,11 @@
               width="32"
               height="21"
             ></svg>
-            </label>>
+            </label>
           </fieldset>
 
           <fieldset class="form-group form-group--more">
-            <legend class="form-group__title">Доп</legend>
+            <legend class="form-group__title form-group__title--additionally">Доп</legend>
             <label class="form-group__title" for="more">
 
             <textarea
@@ -288,13 +322,14 @@
           </label>
           </fieldset>
 
-          <div class="form__container">
+          <div class="form__container container">
             <span class="form__mark">*Поля обязательны для заполнения</span>
             <button class="form__submit button" type="submit">
               Отправить заказ
             </button>
           </div>
         </form>
+      </div>
       </section>
     </main>
 
