--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <nav class="header__nav">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="index.html">
           <img
             class="header__logo-image"
             src="./img/mishka-logo-mobile.svg"
@@ -60,8 +60,12 @@
       </nav>
     </header>
     <main>
+      <section class="intro">
+        <div class="intro__wrapper">
+          <h2 class="intro__tittle">Каталог товаров</h2>
+        </div>
+      </section>
       <section class="catalog">
-        <h2 class="catalog__tittle intro__tittle">Каталог товаров</h2>
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog-item__link" href="#">
@@ -88,7 +92,7 @@
               </div>
             </div>
           </li>
-          <li class="catalog__item catalog-item">
+          <li class="catalog__item">
             <a class="catalog-item__link" href="#">
               <img
                 class="catalog-item__link-image"
@@ -115,10 +119,10 @@
               </div>
             </div>
           </li>
-          <li class="catalog__item catalog-item">
+          <li class="catalog__item">
             <a class="catalog-item__link" href="#">
               <img
-                class="catalog-item__image"
+                class="catalog-item__link-image"
                 src="./img/big-basket.jpg"
                 width="260"
                 height="195"
@@ -126,7 +130,7 @@
               />
             </a>
             <div class="catalog__item-wrapper">
-              <div class="catalog-item__info">
+              <div class="catalog-item__info catalog-item__info--big">
                 <a class="catalog-item__link" href="#">
                   <h3 class="catalog-item__title">
                     Большая корзинка для игрушек
@@ -311,57 +315,6 @@
         </fieldset>
         <button class="modal__submit button" type="submit">Добавить</button>
       </form>
-    </div>
-    <div class="modal modal__close container">
-      <div class="modal-container">
-        <h2 class="modal__title">Добавить в корзину</h2>
-        <form
-          class="modal__form"
-          action="https://echo.htmlacademy.ru"
-          method="GET"
-        >
-          <fieldset class="modal__form-group">
-            <legend class="modal__legend">Выберите размер:</legend>
-            <ul class="modal__list">
-              <li class="modal__item">
-                <label class="modal__label">
-                  <input
-                    class="modal__input"
-                    type="radio"
-                    name="size"
-                    value="S"
-                    checked
-                  />
-                  S
-                </label>
-              </li>
-              <li class="modal__item">
-                <label class="modal__label">
-                  <input
-                    class="modal__input"
-                    type="radio"
-                    name="size"
-                    value="M"
-                  />
-                  M
-                </label>
-              </li>
-              <li class="modal__item">
-                <label class="modal__label">
-                  <input
-                    class="modal__input"
-                    type="radio"
-                    name="size"
-                    value="L"
-                  />
-                  L
-                </label>
-              </li>
-            </ul>
-          </fieldset>
-          <button class="modal__submit button" type="submit">Добавить</button>
-        </form>
-      </div>
     </div>
   </body>
 </html>
